--- a/style.css
+++ b/style.css
@@ -8,38 +8,29 @@
     font-family: 'Cairo', sans-serif;
 }
 
-header{
+.cabecalho{
     background: #FFFFFF;
-    padding: 20px 0;
+    padding: 10px 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    border-bottom: 0.4px solid #797474;
 }
 
-a{
+.cabecalho a{
     text-decoration: none;
 }
 
 .logo{
-    margin: 0 25%;
-    display: inline;
+    display: flex;
+    flex-direction: row;
+    padding: 25px;
 }
 
-.label{
-    padding: 5px;
-    color:#FFFFFF;
-    border-radius: 5px;
-    position: relative;
-    left: 20%;
-}
-
-.twitter{
-    background-color: #5353e0;
-}
-
-.github{
-    background-color: #0808538a;
-}
-
-.linkedin{
-    background-color: #5353e0;
+.social-media img{
+    width: 30px;
+    padding: 3px
 }
 
 main{
@@ -81,21 +72,30 @@ p{
     padding: 0 0 1.5rem;
 }
 
+.sobre-mim a{
+    text-decoration: none;
+    color: #000000;
+}
+
+.caixa-sobre-mim{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .caixa-sobre-mim p{
-    margin: 1.5em 0 0 0;
     color: #000000;
     font-weight: bold;
-    padding: 0 0 10px;
-    font-size: 22px;
+    padding: 10px 0;
+    font-size: 20px;
+    border-top: 0.4px solid #797474;
 }
 
 .spotify{
-    display: inline;
-}
-
-.gif{
-    border-radius: 90px;
-    margin-left: 3rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .coisas-curto{
@@ -133,13 +133,18 @@ p{
 .agradecimentos p{
     text-align: justify;
     padding: 0 0 1.5rem;
-    
+}
+
+.agradecimentos a{
+    text-decoration: none;
+    color:#FFFFFF;
 }
 
 footer{
     text-align: center;
-    background: url(./imagens/bg.jpg);
     padding: 40px;
+    border-top: 0.4px solid #797474;
+    background: #000000;
 }
 
 .copyright{
