--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap'); */
 
 * {
     padding: 0;
@@ -10,7 +10,6 @@
 
 .cabecalho{
     background: #FFFFFF;
-    padding: 10px 0;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -25,7 +24,6 @@
 .logo{
     display: flex;
     flex-direction: row;
-    padding: 25px;
 }
 
 .social-media img{
@@ -33,9 +31,7 @@
     padding: 3px
 }
 
-main{
-    background: linear-gradient(#FFFFFF, #000000);
-}
+
 
 .caixa{
     width: 940px;
@@ -60,12 +56,12 @@ main{
     margin-right: 20px;
     width: 16%;
     float: left;
-    border: #000000 solid 5px;
+    border: #000000 solid 3px;
     border-radius: 25px;
     text-align: justify;
 }
 
-p{
+.paragrafo{
     font-size: 1.3rem;
     margin: 0 10px;
     color:#5353e0;
@@ -99,7 +95,7 @@ p{
 }
 
 .coisas-curto{
-    padding-bottom: 1rem;
+    padding-bottom: 3rem;
 }
 
 .caixa-coisas-curto{
@@ -142,12 +138,11 @@ p{
 
 footer{
     text-align: center;
-    padding: 40px;
+    padding: 2rem;
     border-top: 0.4px solid #797474;
-    background: #000000;
 }
 
 .copyright{
     font-size: 13px;
-    color: #FFFFFF;
+    color: #000000;
 }
